# vCache

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.dev  README.md  README_DEV.md  ReadMe_Dev.md  add_docstrings.py  convert_to_json_list.py  log.txt  pyproject.toml  rules.md  setup.py  test.py  transform_jsonl.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: -short--descriptive-title-.md  bug_report.md  feature_request.md  vcache-issue-template.md
.github/workflows/: ci.yml
benchmarks/: README.md  ReadMe.md  __init__.py  _plotter_combined.py  _plotter_combined_old.py  _plotter_helper.py  _plotter_individual.py  _plotter_individual_old.py  benchmark.py  benchmark_old.py  convert_jsonl_to_json.py  eviction_benchmark.py  plotter_offline.py
benchmarks/common/: __init__.py  apy.py  comparison.py  resource_metrics.py
benchmarks/semantic_benchmark/: README.md  __init__.py  create_template.py  llm_embedding_comparison.py  requirements.txt
benchmarks/your_datasets/: your_custom_dataset.parquet
examples/: 01_basic_usage.py  02_custom_policy.py  03_vector_database.py  04_system_prompts.py  05_advanced_configuration.py  README.md
playground/: example_1.py  example_2.py  sample_data.parquet
tests/: ReadMe.md  ReadMe_Dev.md  runner.py  test_lfu_eviction_policy.py
tests/integration/: conftest.py  test_1.py  test_benchmark_smoke.py  test_concurrency.py  test_dynamic_threshold.py  test_eviction_policy.py  test_general.py  test_llm_comparison.py  test_no_cache.py  test_static_threshold.py
vcache/: __init__.py  config.py  main.py
vcache/inference_engine/: __init__.py  inference_engine.py
vcache/vcache_core/: __init__.py
vectorq/: __init__.py  config.py  main.py
(+184 files in other folders)
